--- a/03tut/views/new-page.html
+++ b/03tut/views/new-page.html
@@ -1,1 +1,16 @@
-les
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <span class="desc">new-page html</span>
+    <div class="imageContent">
+      <img src="img/Screenshot (83).png" alt="home image" class="img" />
+    </div>
+  </body>
+</html>
