--- a/03tut/views/new-page.html
+++ b/03tut/views/new-page.html
@@ -10,7 +10,7 @@
   <body>
     <span class="desc">new-page html</span>
     <div class="imageContent">
-      <img src="img/Screenshot (83).png" alt="home image" class="img" />
+      <img src="img/image.png" alt="home image" class="img" />
     </div>
   </body>
 </html>
