--- a/03tut/views/index.html
+++ b/03tut/views/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <span class="desc">index html</span>
+    <span class="desc">index page</span>
   </body>
 </html>
